--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Mac files
+.DS_Store
+
+# intellij
+.idea/
+*.iml
+*.ipr
+out/
