added config provider example

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,10 @@ services:
       CONNECT_CONNECTOR_CLIENT_CONFIG_OVERRIDE_POLICY: "All"
       CONNECT_ACCESS_CONTROL_ALLOW_ORIGIN: "*"
       CONNECT_ACCESS_CONTROL_ALLOW_METHODS: "GET,OPTIONS,HEAD,POST,PUT,DELETE"
+      CONNECT_CONFIG_PROVIDERS: "env"
+      CONNECT_CONFIG_PROVIDERS_ENV_CLASS: "ch.yax.connect.quickstart.config.provider.EnvironmentConfigProvider"
+      CONNECT_CONFIG_PROVIDERS_ENV_PARAM_BLACKLIST: "foo,bar"
+      CONNECT_CONFIG_PROVIDERS_ENV_PARAM_TTL_MS: "300000"
 
     volumes:
       - ./mount:/etc/kafka-connect/jars
