--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.yax.connect.quickstart</groupId>
-    <artifactId>connect-example</artifactId>
+    <artifactId>connect-quickstart</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Kafka Connect Plugin Example</name>
+    <name>Kafka Connect Quickstart Examples</name>
     <url>https://github.com/rueedlinger/kafka-connect-quickstart</url>
-
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
