--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+dependency-reduced-pom.xml
 
 # Mac files
 .DS_Store
