--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,5 +106,8 @@ services:
       CONNECT_CONFIG_PROVIDERS_ENV_CLASS: "ch.yax.connect.quickstart.config.provider.EnvironmentConfigProvider"
       CONNECT_CONFIG_PROVIDERS_ENV_PARAM_BLACKLIST: "foo,bar"
 
+      # ENVs for connector configuration
+      CONFIG_MAX_INTERVAL_MS: 2000
+
     volumes:
       - ./mount:/etc/kafka-connect/jars
