--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,22 @@ services:
     depends_on:
       - connect
 
+  kafka-ui:
+    image: provectuslabs/kafka-ui:0.0.9
+    hostname: kafka-ui
+    container_name: quickstart-kafka-ui
+    depends_on:
+      - zookeeper
+      - broker
+      - schema-registry
+    ports:
+      - "8080:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: "quickstart"
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "broker:29092"
+      KAFKA_CLUSTERS_0_ZOOKEEPER: "zookeeper:2181"
+      KAFKA_CLUSTERS_0_SCHEMAREGISTRY: "http://schema-registry:8081"
+
   connect:
     build: .
     hostname: connect
