--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>11</maven.compiler.release>
-        <kafka.version>2.7.0</kafka.version>
-        <confluent.version>6.1.0</confluent.version>
+        <kafka.version>2.8.0</kafka.version>
+        <confluent.version>6.2.1</confluent.version>
         <junit.jupiter.version>5.7.0</junit.jupiter.version>
         <mockito.version>3.6.0</mockito.version>
-        <lombok.version>1.18.12</lombok.version>
+        <lombok.version>1.18.20</lombok.version>
     </properties>
 
     <dependencies>
@@ -203,7 +203,7 @@
     <repositories>
         <repository>
             <id>confluent</id>
-            <url>http://packages.confluent.io/maven/</url>
+            <url>https://packages.confluent.io/maven/</url>
         </repository>
     </repositories>
 
