--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,21 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>11</maven.compiler.release>
-        <kafka.version>3.0.0</kafka.version>
-        <confluent.version>7.0.1</confluent.version>
-        <junit.jupiter.version>5.7.0</junit.jupiter.version>
-        <mockito.version>3.6.0</mockito.version>
-        <lombok.version>1.18.20</lombok.version>
+        <kafka.version>3.6.0</kafka.version>
+        <confluent.version>7.5.1</confluent.version>
+        <junit.jupiter.version>5.9.2</junit.jupiter.version>
+        <mockito.version>5.3.1</mockito.version>
+        <assertj.version>3.24.2</assertj.version>
+        <awaitility.version>4.2.0</awaitility.version>
+        <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <dependencies>
-
         <!-- required -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.11</version>
+            <version>3.12.0</version>
         </dependency>
 
         <!-- scope provided -->
@@ -50,6 +51,7 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- used for the AvroDebugConverter example -->
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-connect-avro-converter</artifactId>
@@ -57,18 +59,17 @@
             <scope>provided</scope>
         </dependency>
 
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.14</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
+            <version>2.0.5</version>
             <scope>provided</scope>
         </dependency>
 
@@ -76,7 +77,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>1.4.7</version>
             <scope>test</scope>
         </dependency>
 
@@ -102,23 +103,16 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.17.2</version>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
-            <version>3.0.0</version>
+            <version>${awaitility.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -126,11 +120,9 @@
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-common</artifactId>
-            <version>2.22.2</version>
+            <version>2.41</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
     <build>
