--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ '**' ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   java:
@@ -38,7 +38,8 @@ jobs:
           file: Dockerfile
           push: false
           tags: quickstart:latest
-      - name: Build Docker Image Confluent
+
+      - name: Build Docker Image Strimzi
         id: docker_build_strimzi
         uses: docker/build-push-action@v2
         with:
