feat: added strimzi based docker example

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,4 +45,4 @@ jobs:
         with:
           file: strimzi.Dockerfile
           push: false
-          tags: quickstart:latest
+          tags: quickstart-strimzi:latest
