--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ '**' ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   java:
@@ -31,9 +31,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build Docker Image
-        id: docker_build
+      - name: Build Docker Image Confluent
+        id: docker_build_confluent
         uses: docker/build-push-action@v2
         with:
+          file: Dockerfile
           push: false
           tags: quickstart:latest
+
+      - name: Build Docker Image Strimzi
+        id: docker_build_strimzi
+        uses: docker/build-push-action@v2
+        with:
+          file: strimzi.Dockerfile
+          push: false
+          tags: quickstart-strimzi:latest
