--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 11
       - name: Build with Maven
         run: mvn -B package --file pom.xml
@@ -24,16 +25,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Build Docker Image Confluent
         id: docker_build_confluent
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           file: Dockerfile
           push: false
@@ -41,7 +42,7 @@ jobs:
 
       - name: Build Docker Image Strimzi
         id: docker_build_strimzi
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           file: strimzi.Dockerfile
           push: false
